--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    androidTestImplementation ('androidx.test.espresso:espresso-contrib:3.4.0'){
+            exclude module: "protobuf-lite"
+    }
 }
